<?xml version="1.0"?>
<package format="2">
  <name>simple_pkg</name>
  <version>0.0.0</version>
  <description>The simple_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="melodic@todo.todo">melodic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/simple_pkg</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rviz_plugin_tutorials</build_depend>
  <build_depend>seed_r7_bringup</build_depend>
  <build_depend>seed_r7_gazebo</build_depend>
  <build_depend>seed_r7_moveit_config</build_depend>
  <build_depend>seed_r7_navigation</build_depend>
  <build_depend>seed_r7_robot_interface</build_depend>
  <build_depend>seed_r7_ros_controller</build_depend>
  <build_depend>seed_r7_typef_moveit_config</build_depend>
  <build_depend>seed_r7_typeg2_arm_moveit_config</build_depend>
  <build_depend>seed_r7_typeg_arm_moveit_config</build_depend>
  <build_depend>seed_r7_typeg_moveit_config</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>smach_viewer</build_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>moveit_simple_controller_manager</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>rviz_plugin_tutorials</build_export_depend>
  <build_export_depend>seed_r7_bringup</build_export_depend>
  <build_export_depend>seed_r7_gazebo</build_export_depend>
  <build_export_depend>seed_r7_moveit_config</build_export_depend>
  <build_export_depend>seed_r7_navigation</build_export_depend>
  <build_export_depend>seed_r7_robot_interface</build_export_depend>
  <build_export_depend>seed_r7_ros_controller</build_export_depend>
  <build_export_depend>seed_r7_typef_moveit_config</build_export_depend>
  <build_export_depend>seed_r7_typeg2_arm_moveit_config</build_export_depend>
  <build_export_depend>seed_r7_typeg_arm_moveit_config</build_export_depend>
  <build_export_depend>seed_r7_typeg_moveit_config</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>smach_viewer</build_export_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_plugin_tutorials</exec_depend>
  <exec_depend>seed_r7_bringup</exec_depend>
  <exec_depend>seed_r7_gazebo</exec_depend>
  <exec_depend>seed_r7_moveit_config</exec_depend>
  <exec_depend>seed_r7_navigation</exec_depend>
  <exec_depend>seed_r7_robot_interface</exec_depend>
  <exec_depend>seed_r7_ros_controller</exec_depend>
  <exec_depend>seed_r7_typef_moveit_config</exec_depend>
  <exec_depend>seed_r7_typeg2_arm_moveit_config</exec_depend>
  <exec_depend>seed_r7_typeg_arm_moveit_config</exec_depend>
  <exec_depend>seed_r7_typeg_moveit_config</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_viewer</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
